--- a/src/components/ModalNew.css
+++ b/src/components/ModalNew.css
@@ -1,49 +1,58 @@
 .Container_ModalNew {
-	display: flex;
-	justify-content: center;
-	background-color: black;
+	position: fixed;
+	top: 0;
+	height: 100vh;
 	width: 100vw;
-	z-index: 2;
+	z-index: 3;
 }
 
 .Form_ModalNew {
-	width: 100%;
-	height: 100vh;
-	background-color: rgb(14 41 74);
-	position: fixed;
-	color: #f5faff;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
-	top: 0;
-	z-index: 1;
+	height: 100%;
+	width: 100%;
+	background-color: rgb(14 41 74);
 }
 
 h1 {
 	font-family: "Raleway", sans-serif;
+	margin-top: 117px;
+}
+
+.Form_ModalNew > h1 {
+	margin-bottom: 0px;
+	color: white;
 }
 
 .FormCont_ModalNew {
-	width: 100%;
 	display: flex;
+	align-items: stretch;
 	flex-direction: column;
 	align-items: center;
+	margin: 10px;
+	width: 90%;
 }
 
 .Input_ModalNew {
-	width: 80vw;
-	border-radius: 7px;
-	height: 28px;
-	border: none;
-	padding: 10px;
 	font-size: 16px;
-	margin-bottom: 23px;
+	border-radius: 10px;
+	border-style: none;
+	padding: 15px;
+	margin-top: 21px;
+	width: 89vw;
+	height: 57px;
+}
+
+.Wrapper_OkKo_ModalNew {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 .Ok_ModalNew {
-	color: rgb(8, 186, 26);
 	margin: 20px;
+	color: rgb(8, 186, 26);
 }
 
 .Ko_ModalNew {
@@ -59,26 +68,42 @@ h1 {
 
 @media only screen and (min-width: 700px) {
 	.Container_ModalNew {
+		position: fixed;
+		top: 0;
 		display: flex;
 		justify-content: center;
 		background-color: #00000057;
-		width: 100vw;
-		position: fixed;
 		height: 100vh;
-		top: 0;
+		width: 100vw;
 	}
+
 	.Form_ModalNew {
-		width: 50vw;
-		height: 50vh;
-		background-color: rgb(29 72 124 / 85%);
 		position: fixed;
-		align-items: center;
-		top: 245px;
-		margin: 0 auto;
-		box-shadow: 1px 1px 11px 6px #05a0db;
+		top: 124px;
 		border-radius: 20px;
+		box-shadow: 1px 1px 11px 6px #05a0db;
+		margin: 0 auto;
+		width: 50vw;
+		height: 50%;
+		min-width: 500px;
+		min-height: 461px;
+		background-color: #1d487cd9;
 	}
+
+	.FormCont_ModalNew {
+		align-items: stretch;
+	}
+
+	.Form_ModalNew > h1 {
+		margin-bottom: 22px;
+		margin-top: 10px;
+		color: white;
+	}
+
 	.Input_ModalNew {
-		width: 398px;
+		min-width: 408px;
+		width: 100%;
+		height: 40px;
+		margin-top: 9px;
 	}
 }
